JSW Devsb/src/objects/Issue_Comments__c.object
<CustomObject>
    <fields>
        <fullName>Issue_Tracker_Owner_Email__c</fullName>
        <label>Issue Tracker Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Issue_overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter overview of issue</description>
        <label>Issue Tracker</label>
        <referenceTo>Issue_Tracker__c</referenceTo>
        <relationshipLabel>Issue Comments</relationshipLabel>
        <relationshipName>Issue_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Days_issue_oppened__c</fullName>
        <formula>IF(  NOT(ISPICKVAL(Issue_overview__r.Issue_Status__c,&apos;Closed&apos;)), TODAY()- DATEVALUE(Issue_overview__r.Issue_Opened_On__c),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Days issue oppened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Issue Comments</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Issue Comments</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issue Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>